# splart

./: .gitignore  README.md  pyproject.toml  run_dev_checks.py
2DGS/: config.yml  loss.py  notebook_main.py
custom/: differentiable_rendering.py  main.py  optimize_2d_gaussian_splatting.py  primitives.py
dev_tools/: run_dev_checks.py  ui_simulate_loss.py
splart/: grow.py  importance_sampling.py  loss_perturbation.py  make_gif.py  render_batched.py  render_common.py  render_sequential.py  renderer.py  run_multiple.py  run_optimization.py  size.py  splat_components.py  training_config.py
src/: config.py  grow.py  loss_perturbation.py  main.py  make_gif.py  renderer.py  splat_components.py
