[tool.poetry]
name = "splart"
version = "0.1.0"
description = ""
authors = ["Berry <berryvansomeren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
requests = "^2.32.3"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
black = "^24.10.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
